# embedra

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.celery  README.md  alembic.ini  docker-compose.infra.yml  docker-compose.yml  env.py  main.py  pyproject.toml  settings.py
.roo/: mcp.json
celery_tasks/: __init__.py  celery.py  tasks.py
database/: db.py  session.py
database/migration/: env.py
database/migration/versions/: 27cb8316c423_initial_migration.py  5adcefb35836_add_embedding_column_for_collection.py  6e0b34497913_rename_size_column_and_remove_unique_.py  bdea55b2fffc_add_status_in_file.py  feaec9591d9b_add_embedding_related_columns_for_column.py
database/models/: __init__.py  collection.py  file.py
database/repositories/: collection.py  file.py
database/repositories/collection/: asyncio.py  core.py  sync.py
database/repositories/file/: asyncio.py  core.py  sync.py
domains/: collection.py  file.py
exceptions/: common.py
middleware/: logging_middleware.py
middlewares/: logging_middleware.py
repositories/collection/: asyncio.py  core.py  sync.py
repositories/file/: asyncio.py  core.py  sync.py
routers/: collections.py  embeddings.py  files.py  utils.py
schemas/: collection.py  common.py  embedding.py  file.py  utils.py
services/: collection.py  file.py
utils/: doc_processor.py  embeddings.py  file_uploader.py  general.py  logger.py  request_context.py  vector_store.py
vector_database/pgvector/: db.py  exception.py  factory.py  repository.py
vector_database/pgvector/model/: base.py  factory.py
(+3 files in other folders)
