[tool.poetry]
name = "embedra"
version = "0.1.0"
description = ""
authors = ["Kevin Liu <kevinxo328@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = {extras = ["standard"], version = "^0.116.0"}
langchain = "^0.3.26"
langchain-google-genai = "^2.1.6"
python-multipart = "^0.0.20"
alembic = "^1.16.3"
psycopg = {extras = ["binary"], version = "^3.2.9"}
greenlet = "^3.2.3"
pgvector = "^0.4.1"
colorlog = "^6.9.0"
langchain-openai = "^0.3.28"
celery = {extras = ["redis"], version = "^5.5.3"}
pydantic-settings = "^2.10.1"
markitdown = {extras = ["docx", "pdf", "pptx"], version = "^0.1.2"}
requests = "^2.32.4"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
